Corregit: al guardar PNG algunes imatges quedaven tallades

--- a/tasca6_visualitzacio_exploratoria.ipynb
+++ b/tasca6_visualitzacio_exploratoria.ipynb
@@ -6,7 +6,7 @@
       "name": "tasca6_visualitzacio_exploratoria.ipynb",
       "provenance": [],
       "mount_file_id": "1G_-XrvzQaODZcIqScil9ktExHyLQOksC",
-      "authorship_tag": "ABX9TyM7U4TlHH7Wyum7ZSEkXlz+"
+      "authorship_tag": "ABX9TyOtHK4RKIlnV/KTfbIfRqLv"
     },
     "kernelspec": {
       "name": "python3",
@@ -388,7 +388,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 627
+          "height": 493
         },
         "id": "OtEP17K2sE77",
         "outputId": "66ca9747-6083-492b-8d30-bb118ba1cdf6"
@@ -435,7 +435,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 627
+          "height": 482
         },
         "id": "bj-ei_aetnW6",
         "outputId": "abb68633-5a3d-4f82-fead-9b7e018f1510"
@@ -479,7 +479,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 627
+          "height": 489
         },
         "id": "vkxCJ-BiupNl",
         "outputId": "d1156d57-91ac-42a1-eb57-35cf6e5e18fe"
@@ -522,7 +522,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 416
+          "height": 489
         },
         "id": "h4IA9yIcuyBC",
         "outputId": "db98e298-7c24-4d0e-96e5-e9cc529d86fb"
@@ -565,7 +565,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 934
+          "height": 606
         },
         "id": "e54r0FZh8GtL",
         "outputId": "bd01c7d4-08a5-4f3b-912b-82cd69393260"
@@ -610,7 +610,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 627
+          "height": 490
         },
         "id": "Y2Hhs_A2OmUP",
         "outputId": "32c48ced-97da-4e8f-c551-d6462c44faf1"
@@ -662,7 +662,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 889
         },
         "id": "vkZMXVda9Iko",
         "outputId": "76cc496d-03b6-4d33-d718-b29b5d8c24d4"
@@ -718,9 +718,10 @@
         "# Exportem totes les imatges en format png\n",
         "# Iterant sobre els elements del diccionari totes_imatges\n",
         "for name, figure in totes_imatges.items():\n",
-        "  figure.savefig('/content/drive/MyDrive/ITAcademy/Tasca6/imatges/' + name + '.png')\n"
+        "  figure.savefig('/content/drive/MyDrive/ITAcademy/Tasca6/imatges/' + name + '.png',\n",
+        "                 bbox_inches='tight')\n"
       ],
-      "execution_count": 33,
+      "execution_count": 38,
       "outputs": []
     },
     {
